--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.9.10'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.5'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.10'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
